# lablink-paper-figures

./: .gitignore  BUG_ANALYSIS_AND_FIX_PLAN.md  BUG_VISUALIZATION.txt  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: lablink_configurability_analysis.md
analysis/: api-architecture-analysis.md  crd-workflow-corrected.md  crd-workflow-research.md  database-schema-analysis.md  graphviz-settings-reference.md  lablink-architecture-analysis.md  lablink-comprehensive-analysis.md  lablink-configuration-analysis.md
data/: README.md  gpu_reliance_README.md  software_complexity_README.md
data/processed/: sleap_dependencies.json
docs/: README.md  getting-started.md
docs/architecture/: README.md  configuration.md  database-schema.md  infrastructure.md  workflows.md
docs/archived/: README.md  infrastructure-verification-2025-11-15.md
docs/development/: README.md  contributing.md  graphviz-reference.md
docs/figures/: README.md
figures/: README.md  diagram_metadata.txt
figures/main/: FIGURE_SUMMARY.md  SOFTWARE_COMPLEXITY_COMPLETION_SUMMARY.md  configuration_hierarchy_metadata.txt  configuration_hierarchy_simple_metadata.txt  deployment_impact_metadata.txt  diagram_metadata.txt  gpu_cost_trends-metadata.txt  (+9 more)
notebooks/: README.md
openspec/: project.md
scripts/: README.md  generate_all_figures.py
src/: README.md  __init__.py
tests/: README.md  __init__.py  test_dependency_extractor.py  test_dependency_visualizer.py  test_diagram_generation.py  test_qr_codes.py  test_terraform_parser.py
(+142 files in other folders)
